--- a/package.json
+++ b/package.json
@@ -3,18 +3,19 @@
   "version": "0.0.0",
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
+    "build": "vite build && vite build --mode staging",
     "preview": "vite preview"
   },
   "dependencies": {
-    "ant-design-vue": "^3.0.0-alpha.14",
     "axios": "^0.24.0",
+    "js-cookie": "^3.0.1",
+    "remixicon": "^2.5.0",
     "sass": "^1.45.0",
-    "vite-plugin-components": "^0.13.3",
     "vue": "^3.2.25"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^2.0.0",
+    "naive-ui": "^2.23.1",
     "vite": "^2.7.2",
     "vue-router": "^4.0.12",
     "vuex": "^4.0.2"
