--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.0.0",
   "scripts": {
     "dev": "vite",
-    "build": "vite build && vite build --mode staging",
+    "build": "vite build && vite build --mode production",
+    "test": "vite build &&n vite build --mode development",
     "preview": "vite preview"
   },
   "dependencies": {
