--- a/.env.development
+++ b/.env.development
@@ -1,4 +1,5 @@
-ENV = 'development'
+VITE_MODE_NAME = 'development'
 
-# base api
-VUE_APP_BASE_API = '/dev-api'
+VITE_BASE_URL = '/'
+VITE_BASE_API_HOST = '/'
+VITE_BASE_API_PATH = '/api'
