--- a/.env.production
+++ b/.env.production
@@ -1,4 +1,5 @@
-ENV = 'production'
+VITE_MODE_NAME = 'production'
 
-# base api
-VUE_APP_BASE_API = '/prod-api'
+VITE_BASE_URL = '/'
+VITE_BASE_API_HOST = '/'
+VITE_BASE_API_PATH = '/api'
