--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
     "js-cookie": "^3.0.1",
     "remixicon": "^2.5.0",
     "sass": "^1.45.0",
-    "vue": "^3.2.25"
+    "vue": "^3.2.25",
+    "vue-i18n": "^9.1.6"
   },
   "devDependencies": {
+    "@intlify/vite-plugin-vue-i18n": "^3.2.1",
     "@vitejs/plugin-vue": "^2.0.0",
     "naive-ui": "^2.23.1",
     "vite": "^2.7.2",
