--- a/.env.development
+++ b/.env.development
@@ -1,5 +1,5 @@
 VITE_MODE_NAME = 'development'
 
-VITE_BASE_URL = '/'
-VITE_BASE_API_HOST = '/'
+VITE_BASE_URL = '/rho-admin'
+VITE_BASE_API_HOST = '/rho-admin'
 VITE_BASE_API_PATH = '/api'
