--- a/.env.production
+++ b/.env.production
@@ -1,5 +1,6 @@
 VITE_MODE_NAME = 'production'
 
-VITE_BASE_URL = '/rho-admin'
+VITE_OUTPUT_DIR = 'dist'
+VITE_BASE_URL = '/rho-admin/'
 VITE_BASE_API_HOST = '/'
 VITE_BASE_API_PATH = '/api'
