--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 VITE_OUTPUT_DIR = 'dist'
 
-VITE_BASE_URL = '/rho-admin'
+VITE_BASE_URL = '/rho-admin/'
 VITE_BASE_API_HOST = '/'
 VITE_BASE_API_PATH = '/api'
